<resources>
    <string name="app_name">BlankMVP</string>
    <string name="base_ok">OK</string>
    <string name="base_cancel">Cancel</string>
    <string name="state_unknown_error">Unknown error</string>
    <string name="error_screen_later">Try later</string>
    <string name="error_screen_error">Error</string>
    <string name="start_subtitle">corona</string>
    <string name="start_title">VIRUS</string>
    <string name="start_version">H1N1</string>
    <string name="start_login">Login</string>
    <string name="start_password">Password</string>
    <string name="start_enter">Enter</string>
    <string name="start_create">Create account</string>
    <string name="create_error">Not all fields are filled in or photo is not selected</string>
    <string name="media_camera">Camera</string>
    <string name="media_gallery">Gallery</string>
    <string name="create_permission_error">Not all permissions have been granted</string>
    <string name="create_success_create">Account created</string>
    <string name="start_auth_error">Authorisation Error</string>
    <string name="toolbar_title">All profiles</string>
    <string name="start_user_not_found">The callable returned a null value</string>
</resources>