<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layoutDescription="@xml/motion_start"
    app:visibilityMode="ignore"
    >

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_corona"
        app:layout_constraintBottom_toTopOf="@id/vWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start_subtitle"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/start_title"
        android:textColor="#ffffff"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/vWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/vWhite"
        />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="end"
        android:lines="2"
        android:text="@string/start_version"
        android:textColor="#ffffff"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/vWhite"
        app:layout_constraintEnd_toEndOf="@id/vWhite"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHorintBg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65"
        />

    <View
        android:id="@+id/vSecondBgView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glHorintBg"
        />

    <View
        android:id="@+id/vWhite"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/glHorintBg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glHorintBg"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/vWhite"
        app:layout_constraintStart_toStartOf="@+id/vWhite"
        app:layout_constraintTop_toTopOf="@+id/vWhite"
        >

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start_login"
            android:inputType="text"
            android:textColor="@color/colorPrimary"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/vWhite"
        app:layout_constraintStart_toStartOf="@+id/vWhite"
        app:layout_constraintTop_toBottomOf="@+id/ilUsername"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary"
        tools:layout_editor_absoluteX="35dp"
        >

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start_password"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnAuthLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/start_enter"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/vWhite"
        app:layout_constraintStart_toStartOf="@+id/vWhite"
        app:layout_constraintTop_toBottomOf="@+id/ilPassword"
        />

    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="?attr/selectableItemBackground"
        android:padding="10dp"
        android:text="@string/start_create"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/vWhite"
        app:layout_constraintStart_toStartOf="@+id/vWhite"
        app:layout_constraintTop_toBottomOf="@+id/btnAuthLogin"
        />

    <FrameLayout
        android:id="@+id/stateContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.motion.widget.MotionLayout>